# spack_cmake_toy

./: .gitignore  CMakeLists.txt  Makefile
